# snake-3d

./: .gitignore  CMakeLists.txt  README.md
src/: ColorsCharlesCorrea.cpp  ColorsCharlesCorrea.h  Constants.h  Direction.h  Fruit.cpp  Fruit.h  Game.cpp  Game.h  MovesQueue.cpp  MovesQueue.h  Okay.cpp  Okay.h  Position.cpp  Position.h  Snake.cpp  Snake.h  Vector.cpp  Vector.h  main.cpp  okay.cpp  okay.h
src/classes/: Direction.cpp  Direction.h  MovesQueue.cpp  Position.cpp  Position.h  Vector.cpp  Vector.h
src/hardcoded/: ColorsCharlesCorrea.cpp  ColorsCharlesCorrea.h
